[gd_scene load_steps=5 format=3 uid="uid://dabxu4kp7wxo7"]

[ext_resource type="Texture2D" uid="uid://b26hhqutocqk" path="res://scenes/pics/images/塔尔寺/塔尔寺.jpg" id="1_3kn3w"]
[ext_resource type="Texture2D" uid="uid://dytkvhrii346" path="res://scenes/pics/images/塔尔寺/塔尔寺-彩虹.jpg" id="2_27hax"]
[ext_resource type="Script" uid="uid://b8yiki0hdnxna" path="res://scenes/pics/pic_texture.gd" id="2_s27gd"]
[ext_resource type="Script" uid="uid://dvlr1s2yryl4n" path="res://scenes/pics/panel.gd" id="4_b3o8y"]

[node name="Pics" type="CanvasLayer"]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PicTexture" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_27hax")
expand_mode = 2
script = ExtResource("2_s27gd")
metadata/_custom_type_script = "uid://b8yiki0hdnxna"

[node name="PicTexture2" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_27hax")
expand_mode = 2
script = ExtResource("2_s27gd")
metadata/_custom_type_script = "uid://b8yiki0hdnxna"

[node name="PicTexture3" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_27hax")
expand_mode = 2
script = ExtResource("2_s27gd")
metadata/_custom_type_script = "uid://b8yiki0hdnxna"

[node name="PicTexture4" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_27hax")
expand_mode = 2
script = ExtResource("2_s27gd")
metadata/_custom_type_script = "uid://b8yiki0hdnxna"

[node name="PicTexture5" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_27hax")
expand_mode = 2
script = ExtResource("2_s27gd")
metadata/_custom_type_script = "uid://b8yiki0hdnxna"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
texture = ExtResource("1_3kn3w")
expand_mode = 2
script = ExtResource("2_s27gd")
metadata/_custom_type_script = "uid://b8yiki0hdnxna"

[node name="TextureRect2" type="TextureRect" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
texture = ExtResource("1_3kn3w")
expand_mode = 2
script = ExtResource("2_s27gd")
metadata/_custom_type_script = "uid://b8yiki0hdnxna"

[node name="TextureRect3" type="TextureRect" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
texture = ExtResource("1_3kn3w")
expand_mode = 2
script = ExtResource("2_s27gd")
metadata/_custom_type_script = "uid://b8yiki0hdnxna"

[node name="TextureRect4" type="TextureRect" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
texture = ExtResource("1_3kn3w")
expand_mode = 2
script = ExtResource("2_s27gd")
metadata/_custom_type_script = "uid://b8yiki0hdnxna"

[node name="TextureRect5" type="TextureRect" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
texture = ExtResource("2_27hax")
expand_mode = 2
script = ExtResource("2_s27gd")
metadata/_custom_type_script = "uid://b8yiki0hdnxna"

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
texture = ExtResource("1_3kn3w")
expand_mode = 2

[node name="TextureRect2" type="TextureRect" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
texture = ExtResource("1_3kn3w")
expand_mode = 2

[node name="TextureRect3" type="TextureRect" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
texture = ExtResource("1_3kn3w")
expand_mode = 2

[node name="TextureRect4" type="TextureRect" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
texture = ExtResource("1_3kn3w")
expand_mode = 2

[node name="TextureRect5" type="TextureRect" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
texture = ExtResource("2_27hax")
expand_mode = 2

[node name="BigPanel" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_b3o8y")

[node name="BigPic" type="TextureRect" parent="BigPanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 188.0
offset_top = 55.0
offset_right = 1751.0
offset_bottom = 1055.0
texture = ExtResource("2_27hax")
stretch_mode = 4

[connection signal="gui_input" from="BigPanel" to="BigPanel" method="_on_gui_input"]
